--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,16 @@
       <groupId>ru.ibsqa.chameleon</groupId>
       <artifactId>chameleon-web-cucumber</artifactId>
     </dependency>
+    <dependency>
+      <groupId>ru.ibsqa.chameleon</groupId>
+      <artifactId>chameleon-db-cucumber</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.h2database</groupId>
+      <artifactId>h2</artifactId>
+      <version>2.2.224</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
   <repositories>
     <repository>
